--- a/src/Options/OptionPageGenerated.tt
+++ b/src/Options/OptionPageGenerated.tt
@@ -3,13 +3,13 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.Linq" #>
 <#@ output extension=".cs" #>
-<#@ include file="..\Classification\ShaderTypesAndDefaultExtension.t4" #>
+<#@ include file="..\Errors\ShaderTypesAndDefaultExtension.t4" #>
 namespace DMS.GLSL.Options
 {
 	using Microsoft.VisualStudio.Shell;
 	using System.ComponentModel;
 
-	public partial class Options : DialogPage
+	public partial class OptionPage : DialogPage
 	{<#
 		foreach(var shaderType in mappingShaderTypeToExtension)
 		{
