--- a/src/Errors/ShaderContentTypesGenerated.tt
+++ b/src/Errors/ShaderContentTypesGenerated.tt
@@ -1,14 +1,13 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
-<#@ assembly name="System.Core" #>
+﻿<#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
-<#@ output extension=".cs" #>
-<#@ include file="ShaderTypesAndDefaultExtension.t4" #>
+<#@ include file="$(ProjectDir)Contracts\\ShaderTypesAndDefaultExtension.t4" #>
 namespace DMS.GLSL.Errors
 {
 	using Microsoft.VisualStudio.Utilities;
 	using System.ComponentModel.Composition;
-	internal class ShaderContentTypes
+	internal static class ShaderContentTypes
 	{
 		public const string GlslShader = "glslShader";
 
@@ -16,10 +15,12 @@ namespace DMS.GLSL.Errors
 		{
 			switch(shaderType)
 			{
-<#foreach(var shaderType in mappingShaderTypeToExtension)
+<#
+foreach(var shaderType in mappingShaderTypeToExtension)
 {
 	var name = ToCamelCase(shaderType.Key);
-	var glslName = $"glsl{name}";#>
+	var glslName = $"glsl{name}";
+#>
 				case <#=name#>: return "<#=shaderType.Value#>";
 <#}#>
 			}
