--- a/src/Errors/ShaderContentTypesGenerated.tt
+++ b/src/Errors/ShaderContentTypesGenerated.tt
@@ -3,12 +3,13 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
-<#@ include file="ShaderTypesAndDefaultExtension.t4" #>
+<#@ include file="../Contracts/ShaderTypesAndDefaultExtension.t4" #>
+using Microsoft.VisualStudio.Utilities;
+using System.ComponentModel.Composition;
+
 namespace DMS.GLSL.Errors
 {
-	using Microsoft.VisualStudio.Utilities;
-	using System.ComponentModel.Composition;
-	internal class ShaderContentTypes
+	internal static class ShaderContentTypes
 	{
 		public const string GlslShader = "glslShader";
 
