--- a/GLSL_Shared/Errors/ShaderContentTypesGenerated.tt
+++ b/GLSL_Shared/Errors/ShaderContentTypesGenerated.tt
@@ -1,9 +1,9 @@
-﻿<#@ assembly name="System.Core" #>
+﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+<#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
-<#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
-<#@ include file="$(ProjectDir)Contracts\\ShaderTypesAndDefaultExtension.t4" #>
-
+<#@ output extension=".cs" #>
+<#@ include file="../Contracts/ShaderTypesAndDefaultExtension.t4" #>
 using Microsoft.VisualStudio.Utilities;
 using System.ComponentModel.Composition;
 
@@ -17,12 +17,10 @@ namespace DMS.GLSL.Errors
 		{
 			switch(shaderType)
 			{
-<#
-foreach(var shaderType in mappingShaderTypeToExtension)
+<#foreach(var shaderType in mappingShaderTypeToExtension)
 {
 	var name = ToCamelCase(shaderType.Key);
-	var glslName = $"glsl{name}";
-#>
+	var glslName = $"glsl{name}";#>
 				case <#=name#>: return "<#=shaderType.Value#>";
 <#}#>
 			}
