--- a/GLSL_Shared/TodoClassification/TodoGlyph.xaml
+++ b/GLSL_Shared/TodoClassification/TodoGlyph.xaml
@@ -2,9 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DMS.GLSL.TodoClassification"
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-	<Image Source="/GLSL;component/Resources/Add.png" Width="12" Margin="0,1,0,0" />
+		<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="rect3721" Fill="Green" Stretch="Uniform" Width="12" Stroke="White" StrokeThickness="0.5">
+			<Path.Data>
+				<PathGeometry Figures="m 84 54 v 57 h -57 v 42 h 57 v 57 h 42 v -57 h 57 V 112 H 126 V 54 Z" FillRule="NonZero"/>
+			</Path.Data>
+		</Path>
+
 </UserControl>
